[package]
name = "wgpu-06-uniforms"
version = "0.1.0"
authors = ["Carlos Neto <https://github.com/carlosvneto>"]
edition = "2021"

[dependencies]
winit = "0.29"
env_logger = "0.11"
log = "0.4"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = [ "derive" ] }
anyhow = "1.0"
# NEW!
cgmath = "0.18"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[[bin]]
name = "wgpu-06-uniforms"
path = "src/main.rs"

[[bin]]
name = "wgpu-06-uniforms-challenge"
path = "src/challenge.rs"